         #1894441) (Gergely Szasz).
20080304 windres.rc,ui/win32/{memorybrowser.{c,h,rc},win32ui.c,debugger.c,
	 Makefile.am}: Win32: Initial implementation of the Memory Browser
	 dialog (Marek).
20080306 disk/plusd.c,if1.c,machine.[ch]: refactor loading custom ROMs from
         snapshots for +D and Interface 1 (Fred).
20080311 memory.c: add support for saving custom machine ROMs in snapshots
         (Fred).
20080311 ui/win32/{win32ui.{c,rc},statusbar.c,options.pl,win32internals.h,
         win32display.c,icons/{mouse_active.bmp,mdr_inactive.bmp,
         mouse_inactive.bmp,mdr_active.bmp}}: Win32: status bar fixes (Marek).
20080311 ui/win32/statusbar.c: Win32: fixed switched inactive tape icon (Marek).
20080313 windres.rc,ui/win32/{win32ui.c,binary.{c,h,rc},Makefile.am}: Win32:
         implementation of the routines to load/save chunks of binary data
         (Marek).
20080313 hacking/win32_todo.txt,ui/win32/del_o.bat: Win32: deleted obsolete
         files (Marek).
20080314 windres.rc,ui/win32/{win32ui.{c,rc},browse.{c,h,rc},Makefile.am,
         icons/tape_marker_mask.bmp,icons/Makefile.am}: Win32: implementation
         of Browse Tape dialog (Marek).
20080314 windres.rc,ui/win32/pokefinder.[ch]: Win32: fix conflicting resource
	 ids between debugger and pokefinder (Marek).
20080314 windres.rc,ui/win32/{win32ui.rc,Makefile.am,statusbar.rc}: Win32: moved
	 win32ui.rc to statusbar.rc, as this resource's contents applied to
	 statusbar only (Marek).
20080315 compat/amiga/{Makefile.am,osname.c}: add AmigaOS-specific osname
         implementation (more of patch #1712260) (Chris Young).
20080315 fuse.c: remove obsolete #include <sys/utsname.h> as uname call has
         been moved to compat/unix/osname.c (more of patch #1712260) (Chris
         Young).
20080315 disk/disk.[ch]: reorganise gap, sync and mark byte generation to move
         the sync and the first half of mark bytes to the correct place (part
         of patch #1894441) (Gergely Szasz).